# CRust

./: .gitignore  Cargo.toml  README.md
db/: lib.rs
migrations/2022-07-26-165750_biodata/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
