[package]
name = "CRUST"
version = "0.1.0"
edition = "2021"
authors = ["Ukeje Chukwuemeriwo"]
description = "A simple CRUD RESTful API built with Rocket and Diesel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"